<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.Register"
    android:paddingVertical="16dp"
    android:paddingHorizontal="16dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/gl1"
        app:layout_constraintVertical_bias="0.1"
        android:layout_marginHorizontal="20dp"
        android:src="@mipmap/logopet"
        />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@id/gl1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintVertical_bias="0.15"
        android:hint="   Usuario"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:background="@drawable/styles_input"
        />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUser"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="25dp"
        android:hint="   Email"
        android:paddingStart="10dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:background="@drawable/styles_input"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etMail"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="25dp"
        android:layout_marginTop="20dp"
        android:hint="   Contraseña"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:background="@drawable/styles_input"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46" />

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:text="@string/tip"
        android:textColor="@color/teal_700"
        android:textSize="16sp"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@id/cvInstitution"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linea"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/cvUser"
        app:layout_constraintEnd_toStartOf="@id/tvTip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintVertical_bias="0.6"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linea"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toTopOf="@id/cvUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvTip"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintVertical_bias="0.6" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvUser"
        android:layout_width="90dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cvInstitution"
        app:layout_constraintTop_toTopOf="@id/gl1"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        >


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/white">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_usuario"
                app:tint="@color/greenoscuro"
                android:background="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/User"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:textColor="@color/grey"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvInstitution"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gl1"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/white">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_institution"
                app:tint="@color/greenoscuro"
                android:background="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Institution"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:textColor="@color/grey"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNegocio"
        android:layout_width="90dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cvInstitution"
        app:layout_constraintTop_toTopOf="@id/gl1"
        android:layout_marginTop="20dp"
        android:background="@color/white">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@color/white">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_shop"
                app:tint="@color/greenoscuro"
                android:background="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Shop"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:textColor="@color/grey"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvUser"
        app:layout_constraintBottom_toTopOf="@id/gl2"
        android:text="@string/Registro"
        android:textSize="20sp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/border_radius"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnTengoCuenta"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:text="@string/IrLogin"
        android:textColor="@color/teal_700"
        android:padding="1dp"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintBottom_toTopOf="@id/gl2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.975"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linea"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintBottom_toTopOf="@id/gl2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnTengoCuenta"
        app:layout_constraintVertical_bias="0.9"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linea"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/btnRegister"
        app:layout_constraintBottom_toTopOf="@id/gl2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnTengoCuenta"
        app:layout_constraintVertical_bias="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

</androidx.constraintlayout.widget.ConstraintLayout>