<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.Login"
    android:paddingVertical="16dp"
    android:paddingHorizontal="16dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="0dp"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/gl1"
        app:layout_constraintVertical_bias="0.05"
        android:layout_marginHorizontal="20dp"
        android:src="@mipmap/logopet"
        />

    <EditText
        android:id="@+id/etUser"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@id/gl1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintVertical_bias="0.15"
        android:hint="   Usuario"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:background="@drawable/styles_input"
        />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUser"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="35dp"
        android:hint="   Contraseña"
        android:paddingStart="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        android:background="@drawable/styles_input"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPassword"
        app:layout_constraintBottom_toTopOf="@id/gl1"
        android:radius="20dp"
        android:text="@string/btnLogin"
        android:textSize="20sp"
        android:background="@drawable/border_radius"
        android:textColor="@color/white"
        app:layout_constraintVertical_bias="0.3"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSinCuenta"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:text="@string/IrRegister"
        android:textColor="@color/teal_700"
        android:padding="1dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintBottom_toTopOf="@id/gl1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.5"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linea"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintBottom_toTopOf="@id/gl1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnSinCuenta"
        app:layout_constraintVertical_bias="0.5"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linea"
        android:textColor="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintBottom_toTopOf="@id/gl1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnSinCuenta"
        app:layout_constraintVertical_bias="0.5" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="350dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl1"
        app:layout_constraintVertical_bias="0.3"
        android:text="Publicidad"/>

</androidx.constraintlayout.widget.ConstraintLayout>