<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Views.Posteos"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ivPerfil"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toStartOf="@id/tvNameUser"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/glTopBar"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/tvNameUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/User"
        android:textSize="20sp"
        android:textColor="@color/grey"
        app:layout_constraintEnd_toEndOf="@id/glMidBar"
        app:layout_constraintStart_toEndOf="@+id/ivPerfil"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/glTopBar"
        app:layout_constraintVertical_bias="0.3"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRol"
        android:layout_width="70dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@id/tvNameUser"
        app:layout_constraintBottom_toBottomOf="@id/glTopBar"
        app:layout_constraintEnd_toEndOf="@id/glMidBar"
        app:layout_constraintStart_toEndOf="@id/ivPerfil"
        android:text="@string/Institution"
        android:textSize="10sp"
        android:background="@color/orange"
        android:textColor="@color/white"
        app:layout_constraintVertical_bias="0.3"/>

    <EditText
        android:id="@+id/etTitulo"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:hint="Titulo"
        android:paddingStart="10dp"
        android:maxLength="20"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glTopBar"
        app:layout_constraintBottom_toBottomOf="@id/glTopImg"
        android:background="@color/white"
        app:layout_constraintVertical_bias="0.0"/>

    <EditText
        android:id="@+id/etDescripccion"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:hint="@string/posteos"
        android:paddingStart="10dp"
        android:maxLines="3"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etTitulo"
        app:layout_constraintBottom_toBottomOf="@id/glTopImg"
        android:background="@color/white"
        app:layout_constraintVertical_bias="0.1"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTopImg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/addImg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toStartOf="@id/glMidBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/glBottomImg"
        app:layout_constraintTop_toBottomOf="@id/glTopImg"
        android:background="@color/white"
        android:src="@drawable/ic_addfoto"
        app:tint="@color/greenoscuro"/>

    <ImageView
        android:id="@+id/sacarImg"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/glMidBar"
        app:layout_constraintBottom_toBottomOf="@id/glBottomImg"
        app:layout_constraintTop_toBottomOf="@id/glTopImg"
        android:background="@color/white"
        android:src="@drawable/ic_sacarfoto"
        app:tint="@color/greenoscuro"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnPost"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glBottomImg"
        app:layout_constraintVertical_bias="0.2"
        android:background="@color/greenoscuro"
        android:text="Publicar"
        android:textSize="19sp"
        android:textColor="@color/white"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glBottomImg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTopBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glMidBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>